# basic_model_addon

./: CMakeLists.txt  README.md  addon.json  linpred.score  release.sh
basic_model_addon/: basic_model_addon.hpp  basic_model_addonModel.cpp  basic_model_addonModel.hpp  basic_model_addonUi.hpp
